--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.coolweather.app.activity.ChooseAreaActivity"
-            android:label="@string/app_name"
-            >
+            android:name=".activity.ChooseAreaActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="ANDROID.INTENT.CATEGORY.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity android:name=".activity.WeatherActivity" >
         </activity>
     </application>
 
